Navigation drawer icons

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,10 +12,10 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.jdapresencia.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_gestionar_trabajadores"
+        android:name="com.example.jdapresencia.ui.gestionar_trabajadores.GestionarTrabajadoresFragment"
+        android:label="@string/menu_gestionar_trabajadores"
+        tools:layout="@layout/fragment_gestionar_trabajadores" />
 
     <fragment
         android:id="@+id/nav_slideshow"
