--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,13 +13,13 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_gallery" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_buscador_trabajadores"
+            android:icon="@drawable/ic_search_black_24dp"
+            android:title="@string/menu_buscador_trabajadores" />
         <item
-            android:id="@+id/nav_tools"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:id="@+id/nav_mis_registros"
+            android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
+            android:title="@string/menu_mis_registros" />
     </group>
 
     <item android:title="Communicate">
