--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,9 +25,9 @@
 
     <fragment
         android:id="@+id/nav_mis_registros"
-        android:name="com.example.jdapresencia.ui.mis_registros.ToolsFragment"
+        android:name="com.example.jdapresencia.ui.mis_registros.RegistrosFragment"
         android:label="@string/menu_mis_registros"
-        tools:layout="@layout/fragment_tools" />
+        tools:layout="@layout/fragment_registros" />
 
     <fragment
         android:id="@+id/nav_share"
