--- a/app/src/main/res/drawable/button_rounded.xml
+++ b/app/src/main/res/drawable/button_rounded.xml
@@ -8,7 +8,7 @@
             android:innerRadiusRatio="1"
             android:shape="rectangle" >
             <corners android:radius="16dp" />
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/colorBlue" />
 
             <padding
                 android:bottom="10dp"
@@ -27,7 +27,7 @@
             android:innerRadiusRatio="1"
             android:shape="rectangle" >
             <corners android:radius="16dp" />
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/colorBlue" />
 
             <padding
                 android:bottom="5dp"
@@ -44,7 +44,7 @@
             android:innerRadiusRatio="1"
             android:shape="rectangle" >
             <corners android:radius="16dp" />
-            <solid android:color="@color/colorPrimaryDark"/>
+            <solid android:color="@color/colorBlueDark"/>
             <padding
                 android:bottom="10dp"
                 android:left="10dp"
