--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/colorBlue"
         android:ems="10"
         android:hint="User"
         android:inputType="textPersonName"
@@ -31,7 +31,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/colorBlue"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
