--- a/app/src/main/res/layout/fragment_buscador_trabajadores.xml
+++ b/app/src/main/res/layout/fragment_buscador_trabajadores.xml
@@ -42,6 +42,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewUserFinder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
