Commit buscador trabajadores recyclerview funcionando

--- a/app/src/main/res/layout/buscador_trabajadores_view_holder.xml
+++ b/app/src/main/res/layout/buscador_trabajadores_view_holder.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/view_holder_uid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="uid" />
-
-    <TextView
-        android:id="@+id/view_holder_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="username" />
+        android:layout_marginLeft="20dp"
+        android:text="uid"/>
 
     <TextView
         android:id="@+id/view_holder_rol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="rol" />
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@id/view_holder_uid"
+        android:text="rol"/>
+
+    <TextView
+        android:id="@+id/view_holder_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@id/view_holder_rol"
+        android:text="username" />
+
 </RelativeLayout>
