--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -2,14 +2,20 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    android:id="@+id/mobile_navigation" >
+    <!-- app:startDestination="@+id/nav_home" -->
 
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.jdapresencia.ui.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
+
+    <fragment
+        android:id="@+id/nav_home_admin"
+        android:name="com.example.jdapresencia.ui.home_admin.HomeAdminFragment"
+        android:label="@string/menu_home_admin"
+        tools:layout="@layout/fragment_home_admin" />
 
     <fragment
         android:id="@+id/nav_gestionar_trabajadores"
@@ -28,12 +34,6 @@
         android:name="com.example.jdapresencia.ui.mis_registros.RegistrosFragment"
         android:label="@string/menu_mis_registros"
         tools:layout="@layout/fragment_registros" />
-
-    <fragment
-        android:id="@+id/nav_share"
-        android:name="com.example.jdapresencia.ui.share.ShareFragment"
-        android:label="@string/menu_share"
-        tools:layout="@layout/fragment_share" />
 
     <fragment
         android:id="@+id/nav_send"
