--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -36,6 +36,11 @@
         tools:layout="@layout/fragment_registros" />
 
     <fragment
+        android:id="@+id/nav_registros_trabajadores"
+        android:name="com.example.jdapresencia.ui.buscador_trabajadores.RegistrosTrabajadorFragment"
+        tools:layout="@layout/fragment_registros_trabajador" />
+
+    <fragment
         android:id="@+id/nav_send"
         android:name="com.example.jdapresencia.ui.send.SendFragment"
         android:label="@string/menu_send"
