--- a/app/src/main/res/layout/item_list_mis_registros.xml
+++ b/app/src/main/res/layout/item_list_mis_registros.xml
@@ -25,4 +25,12 @@
         android:layout_toRightOf="@id/idDatoHoraEntrada"
         android:layout_marginLeft="25dp"
         android:text="mensaje" />
+
+    <TextView
+        android:id="@+id/idDatoDuracion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/idDatoHoraEntrada"
+        android:layout_marginLeft="100dp"
+        android:text="mensaje" />
 </RelativeLayout>
