--- a/app/src/main/res/layout/fragment_gestionar_trabajadores.xml
+++ b/app/src/main/res/layout/fragment_gestionar_trabajadores.xml
@@ -51,19 +51,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordNewUser" />
 
-    <Button
-        android:id="@+id/button_modifyUser"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/button_rounded_border"
-        android:text="modify / delete"
-        android:textColor="#000"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_addNewUser" />
+        app:layout_constraintTop_toBottomOf="@+id/button_addNewUser">
+
+        <Button
+            android:id="@+id/button_modifyUser"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/button_rounded_border"
+            android:gravity="center"
+            android:text="modify"
+            android:textColor="#000" />
+
+        <Button
+            android:id="@+id/button_deleteUser"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/button_rounded_border"
+            android:text="delete"
+            android:gravity="center" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
