--- a/app/src/main/res/drawable/button_rounded_modify.xml
+++ b/app/src/main/res/drawable/button_rounded_modify.xml
@@ -8,30 +8,14 @@
             android:innerRadiusRatio="1"
             android:shape="rectangle" >
             <corners android:radius="16dp" />
-            <stroke android:width="2dp" android:color="@color/colorPrimary" />
+            <solid android:color="@color/colorPrimary" />
+
             <padding
                 android:bottom="10dp"
                 android:left="10dp"
                 android:right="10dp"
                 android:top="10dp" />
 
-        </shape>
-    </item>
-
-    <!-- button focused -->
-    <item
-        android:state_pressed="false"
-        android:state_focused="true">
-        <shape
-            android:innerRadiusRatio="1"
-            android:shape="rectangle" >
-            <corners android:radius="16dp" />
-            <stroke android:width="2dp" android:color="@color/colorPrimary" />
-            <padding
-                android:bottom="5dp"
-                android:left="10dp"
-                android:right="10dp"
-                android:top="5dp" />
         </shape>
     </item>
 
@@ -43,13 +27,11 @@
             android:innerRadiusRatio="1"
             android:shape="rectangle" >
             <corners android:radius="16dp" />
-            <stroke android:width="2dp" android:color="@color/colorPrimary" />
             <solid android:color="@color/colorPrimaryDark"/>
             <padding
                 android:bottom="10dp"
                 android:left="10dp"
                 android:right="10dp"
                 android:top="10dp" />
-        </shape>
-    </item>
+        </shape></item>
 </selector>
