--- a/app/src/main/res/layout/fragment_buscador_trabajadores.xml
+++ b/app/src/main/res/layout/fragment_buscador_trabajadores.xml
@@ -22,7 +22,7 @@
         android:id="@+id/boton_buscar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Buscar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/input_buscador"
         app:layout_constraintTop_toTopOf="parent" />
