--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,6 +33,11 @@
                 android:icon="@drawable/ic_menu_send"
                 android:title="@string/menu_send" />
                 <!--android:visible="false"-->
+
+            <item
+                android:id="@+id/nav_receive"
+                android:icon="@drawable/ic_menu_send"
+                android:title="@string/menu_receive" />
         </menu>
     </item>
 
