--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,6 +24,10 @@
             android:id="@+id/nav_mis_registros"
             android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
             android:title="@string/menu_mis_registros" />
+        <item
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/ic_account_circle_black_24dp"
+            android:title="@string/menu_profile" />
     </group>
 
     <item android:title="Communicate">
