--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -41,6 +41,12 @@
         tools:layout="@layout/fragment_registros_trabajador" />
 
     <fragment
+        android:id="@+id/nav_profile"
+        android:name="com.example.jdapresencia.ui.user_profile.UserProfileFragment"
+        android:label="@string/menu_profile"
+        tools:layout="@layout/fragment_user_profile" />
+
+    <fragment
         android:id="@+id/nav_send"
         android:name="com.example.jdapresencia.ui.send.SendFragment"
         android:label="@string/menu_send"
