--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -45,4 +45,17 @@
         </menu>
     </item>
 
+    <item android:title="Multimedia">
+        <menu>
+            <item
+                android:id="@+id/nav_music"
+                android:icon="@drawable/ic_queue_music_black_24dp"
+                android:title="@string/menu_music" />
+
+            <item
+                android:id="@+id/nav_video"
+                android:icon="@drawable/ic_play_circle_filled_black_24dp"
+                android:title="@string/menu_video" />
+        </menu>
+    </item>
 </menu>
