--- a/app/src/main/res/layout/fragment_modificar_trabajadores.xml
+++ b/app/src/main/res/layout/fragment_modificar_trabajadores.xml
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.346" />
 
     <EditText
-        android:id="@+id/usernameModifyUpdate"
+        android:id="@+id/upNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/usernameModify" />
 
     <EditText
-        android:id="@+id/passwordModifyUpdate"
+        android:id="@+id/upEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -49,7 +49,7 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameModifyUpdate" />
+        app:layout_constraintTop_toBottomOf="@+id/upNumber" />
 
     <RadioGroup
         android:id="@+id/radioGroupUserRol"
@@ -62,7 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordModifyUpdate">
+        app:layout_constraintTop_toBottomOf="@+id/upEmail">
 
         <RadioButton
             android:id="@+id/userRolTrabajador"
