--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -60,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/fotoImageButton" />
 
     <EditText
-        android:id="@+id/actualPassword"
+        android:id="@+id/upName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -68,7 +68,7 @@
         android:layout_marginEnd="32dp"
         android:backgroundTint="@color/colorBlue"
         android:ems="10"
-        android:hint="Password (required)"
+        android:hint="Name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,21 +78,21 @@
         app:layout_constraintVertical_bias="0.346" />
 
     <EditText
-        android:id="@+id/usernameModifyUpdate"
+        android:id="@+id/upNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:backgroundTint="@color/colorBlue"
         android:ems="10"
-        android:hint="New username"
+        android:hint="Number"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/actualPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/upName" />
 
     <EditText
-        android:id="@+id/passwordModifyUpdate"
+        android:id="@+id/upEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -100,11 +100,11 @@
         android:layout_marginEnd="32dp"
         android:backgroundTint="@color/colorBlue"
         android:ems="10"
-        android:hint="New password"
-        android:inputType="textPassword"
+        android:hint="Email"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameModifyUpdate" />
+        app:layout_constraintTop_toBottomOf="@+id/upNumber" />
 
     <Button
         android:id="@+id/button_userModify"
@@ -119,6 +119,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordModifyUpdate" />
+        app:layout_constraintTop_toBottomOf="@+id/upEmail" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
