--- a/app/src/main/res/layout/item_list_buscador_trabajadores.xml
+++ b/app/src/main/res/layout/item_list_buscador_trabajadores.xml
@@ -2,39 +2,70 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content" android:background="?attr/selectableItemBackground">
 
-    <TextView
-        android:id="@+id/view_holder_uid"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_centerVertical="true"
-        android:text="uid"/>
+        android:layout_marginBottom="15dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/view_holder_rol"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_toRightOf="@id/view_holder_uid"
-        android:layout_centerVertical="true"
-        android:text="rol"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/view_holder_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_toRightOf="@id/view_holder_rol"
-        android:layout_centerVertical="true"
-        android:text="username" />
+            <TextView
+                android:id="@+id/view_holder_uid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_centerVertical="true"
+                android:text="uid"/>
 
-    <Button
-        android:id="@+id/view_holder_boton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
-        android:layout_alignParentRight="true"
-        android:text="@string/boton_ver_registros"
-        android:visibility="invisible"/>
+            <TextView
+                android:id="@+id/view_holder_rol"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_toRightOf="@id/view_holder_uid"
+                android:layout_centerVertical="true"
+                android:text="rol"/>
+
+            <TextView
+                android:id="@+id/view_holder_username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_toRightOf="@id/view_holder_rol"
+                android:layout_centerVertical="true"
+                android:text="username" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/view_holder_perfil"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_centerVertical="true"
+                android:text="Ver Perfil" />
+
+            <Button
+                android:id="@+id/view_holder_boton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/view_holder_perfil"
+                android:layout_marginLeft="20dp"
+                android:layout_centerVertical="true"
+                android:text="Ver Registros"
+                android:visibility="invisible"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
